[gd_scene load_steps=12 format=3 uid="uid://bwj3wqpjf7a6p"]

[ext_resource type="Script" path="res://main.gd" id="1_gt83v"]
[ext_resource type="PackedScene" uid="uid://d314agckqwoeo" path="res://scenes/paddle.tscn" id="1_uhfkt"]
[ext_resource type="PackedScene" uid="uid://p4n84krlbpj8" path="res://scenes/ball.tscn" id="2_kadcf"]
[ext_resource type="LabelSettings" uid="uid://qvff60k64rq6" path="res://resources/hud_label_settings.tres" id="3_b4grb"]
[ext_resource type="Script" path="res://scripts/score_label.gd" id="3_glop4"]
[ext_resource type="Script" path="res://scripts/lives_label.gd" id="5_xxxfr"]
[ext_resource type="PackedScene" uid="uid://bjeybdkbf0rro" path="res://scenes/menu_layer.tscn" id="7_fh1wi"]
[ext_resource type="PackedScene" uid="uid://chtlfbi823pw2" path="res://scenes/brick.tscn" id="8_amsgt"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7xejs"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_m4177"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ywypa"]
normal = Vector2(-1, 0)
distance = -1152.0

[node name="Main" type="Node2D"]
script = ExtResource("1_gt83v")

[node name="Paddle" parent="." instance=ExtResource("1_uhfkt")]
position = Vector2(576, 592)
rotation = 1.5708
is_player = true

[node name="Ball" parent="Paddle" instance=ExtResource("2_kadcf")]
unique_name_in_owner = true
position = Vector2(-336, 16)
rotation = -1.5708

[node name="Boundaries" type="StaticBody2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource("WorldBoundaryShape2D_7xejs")

[node name="Left2" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource("WorldBoundaryShape2D_m4177")

[node name="Right" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource("WorldBoundaryShape2D_ywypa")

[node name="TopLeftHUD" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="TopLeftHUD"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = ExtResource("3_b4grb")
script = ExtResource("3_glop4")
metadata/_edit_lock_ = true

[node name="LivesLabel" type="Label" parent="TopLeftHUD"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("5_xxxfr")

[node name="MenuLayer" parent="." instance=ExtResource("7_fh1wi")]
unique_name_in_owner = true
visible = false

[node name="Brick" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(128, 50)

[node name="Brick2" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(256, 50)

[node name="Brick3" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(384, 49)

[node name="Brick4" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(512, 49)

[node name="Brick5" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(640, 49)

[node name="Brick6" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(768, 49)

[node name="Brick7" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(896, 50)

[node name="Brick8" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(1024, 50)

[node name="Brick9" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(128, 130)

[node name="Brick10" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(256, 130)

[node name="Brick11" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(384, 129)

[node name="Brick12" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(512, 129)

[node name="Brick13" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(640, 129)

[node name="Brick14" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(768, 129)

[node name="Brick15" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(896, 130)

[node name="Brick16" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(1024, 130)

[node name="Brick17" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(128, 214)

[node name="Brick18" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(256, 214)

[node name="Brick19" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(384, 213)

[node name="Brick20" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(512, 213)

[node name="Brick21" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(640, 213)

[node name="Brick22" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(768, 213)

[node name="Brick23" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(896, 214)

[node name="Brick24" parent="." instance=ExtResource("8_amsgt")]
position = Vector2(1024, 214)
